--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/top_btn.css">
     <link rel="stylesheet" href="css/side_menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <title>2020-10-20 손근진</title>
+    <title>brand web</title>
   </head>
   <body>
     <!-- 사이드 메뉴 시작 -->
